[gd_scene load_steps=14 format=3 uid="uid://cw7ye7msiyejp"]

[ext_resource type="Script" path="res://scr/cards/card Template.gd" id="1_dq7io"]
[ext_resource type="Texture2D" uid="uid://c7ncr1xoec8ni" path="res://assets/textures/SCG_Card_Frame.png" id="2_eqb1k"]
[ext_resource type="PackedScene" uid="uid://eik7hn8vmhxq" path="res://scr/tools/scriveners_rich_text_label.tscn" id="3_m5x4u"]
[ext_resource type="Texture2D" uid="uid://difxuhmw3l4jm" path="res://icon.svg" id="4_kqsee"]
[ext_resource type="Texture2D" uid="uid://h307w1s2265g" path="res://assets/textures/Icons/factions/ingenuity_icon.png" id="5_ut3ux"]
[ext_resource type="Texture2D" uid="uid://ugct8o3ae41s" path="res://assets/textures/Icons/power_icon.png" id="6_4ahjv"]
[ext_resource type="Texture2D" uid="uid://yvmoavymhnbc" path="res://assets/textures/Icons/heart_icon.png" id="7_3h58n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3fudf"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 48
border_width_top = 48
border_width_right = 48
border_width_bottom = 48
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 75
corner_radius_top_right = 75
corner_radius_bottom_right = 75
corner_radius_bottom_left = 75

[sub_resource type="Theme" id="Theme_a7u7p"]
Panel/styles/panel = SubResource("StyleBoxFlat_3fudf")

[sub_resource type="LabelSettings" id="LabelSettings_l5jbs"]
font_size = 45
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4xy22"]
font_size = 45
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_r0pwq"]
font_size = 60
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2lyuj"]
font_size = 45
font_color = Color(0, 0, 0, 1)

[node name="CardTemplate" type="Node2D"]
script = ExtResource("1_dq7io")
metadata/_edit_vertical_guides_ = [-480.0, 480.0, -121.0, 120.0]
metadata/_edit_horizontal_guides_ = [-672.0, 672.0, -168.0, 168.0]

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(960, 1344)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -69.0
offset_right = 913.0
offset_bottom = 1275.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_group_ = true

[node name="background" type="MarginContainer" parent="Control"]
custom_minimum_size = Vector2(960, 1344)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Control" parent="Control/background"]
layout_mode = 2
theme = SubResource("Theme_a7u7p")

[node name="card front" type="TextureRect" parent="Control/background/Panel"]
custom_minimum_size = Vector2(960, 1344)
layout_mode = 0
offset_right = 960.0
offset_bottom = 1344.0
texture = ExtResource("2_eqb1k")

[node name="Description box" type="MarginContainer" parent="Control/background/Panel"]
layout_mode = 0
offset_left = 48.0
offset_top = 812.0
offset_right = 912.0
offset_bottom = 1276.0

[node name="GridContainer" type="VBoxContainer" parent="Control/background/Panel/Description box"]
custom_minimum_size = Vector2(720, 435)
layout_mode = 2

[node name="descriptionText" parent="Control/background/Panel/Description box/GridContainer" instance=ExtResource("3_m5x4u")]
custom_minimum_size = Vector2(445, 338)
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 35
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut  labore et dolore magna aliqua. Sed pulvinar proin gravida hendrerit lectus a. Pulvinar elementum"
iconSize = 60

[node name="MarginContainer" type="HBoxContainer" parent="Control/background/Panel/Description box/GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="Control/background/Panel/Description box/GridContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="flavorText" parent="Control/background/Panel/Description box/GridContainer/MarginContainer" instance=ExtResource("3_m5x4u")]
custom_minimum_size = Vector2(487, 62)
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 28
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor verra nibh "

[node name="Image window" type="MarginContainer" parent="Control/background/Panel"]
layout_mode = 0
offset_left = 36.0
offset_top = 20.0
offset_right = 920.0
offset_bottom = 612.0

[node name="cardImage" type="TextureRect" parent="Control/background/Panel/Image window"]
layout_mode = 2
texture = ExtResource("4_kqsee")
expand_mode = 1
stretch_mode = 6

[node name="header" type="MarginContainer" parent="Control/background/Panel"]
layout_mode = 0
offset_left = 64.0
offset_top = 628.0
offset_right = 892.0
offset_bottom = 792.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/background/Panel/header"]
layout_mode = 2

[node name="Faction and cost" type="HBoxContainer" parent="Control/background/Panel/header/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="factionTexture" type="TextureRect" parent="Control/background/Panel/header/HBoxContainer/Faction and cost"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("5_ut3ux")
expand_mode = 1
stretch_mode = 5

[node name="cost" type="Label" parent="Control/background/Panel/header/HBoxContainer/Faction and cost"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_vertical = 8
text = "00"
label_settings = SubResource("LabelSettings_l5jbs")

[node name="name and types" type="VBoxContainer" parent="Control/background/Panel/header/HBoxContainer"]
layout_mode = 2

[node name="cardName" type="Label" parent="Control/background/Panel/header/HBoxContainer/name and types"]
layout_mode = 2
text = "Name"
label_settings = SubResource("LabelSettings_4xy22")
horizontal_alignment = 1

[node name="subtypeText" parent="Control/background/Panel/header/HBoxContainer/name and types" instance=ExtResource("3_m5x4u")]
custom_minimum_size = Vector2(540, 95)
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 40
text = "[img={width}90{height}]res://assets/textures/Icons/card types/card_icon.png[/img] Subtype"
iconSize = 90

[node name="Power" type="MarginContainer" parent="Control/background/Panel"]
layout_mode = 0
offset_left = 32.0
offset_top = 1152.0
offset_right = 183.0
offset_bottom = 1303.0

[node name="TextureRect" type="TextureRect" parent="Control/background/Panel/Power"]
layout_mode = 2
texture = ExtResource("6_4ahjv")
expand_mode = 1

[node name="powerText" type="Label" parent="Control/background/Panel/Power/TextureRect"]
layout_mode = 0
offset_left = 36.0
offset_top = 40.0
offset_right = 104.0
offset_bottom = 123.0
text = "00"
label_settings = SubResource("LabelSettings_r0pwq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Heart" type="MarginContainer" parent="Control/background/Panel"]
layout_mode = 0
offset_left = 184.0
offset_top = 1152.0
offset_right = 335.0
offset_bottom = 1303.0

[node name="TextureRect" type="TextureRect" parent="Control/background/Panel/Heart"]
layout_mode = 2
texture = ExtResource("7_3h58n")
expand_mode = 1

[node name="heartText" type="Label" parent="Control/background/Panel/Heart/TextureRect"]
layout_mode = 0
offset_left = 44.0
offset_top = 24.0
offset_right = 112.0
offset_bottom = 107.0
text = "00"
label_settings = SubResource("LabelSettings_r0pwq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ArtistTage" type="HBoxContainer" parent="Control/background/Panel"]
visible = false
layout_mode = 0
offset_left = 848.0
offset_top = 1077.0
offset_right = 1114.0
offset_bottom = 1140.0
rotation = -1.5708

[node name="artistTag" type="Label" parent="Control/background/Panel/ArtistTage"]
layout_mode = 2
text = "Artist:"
label_settings = SubResource("LabelSettings_2lyuj")

[node name="artistName" type="Label" parent="Control/background/Panel/ArtistTage"]
layout_mode = 2
text = "Name"
label_settings = SubResource("LabelSettings_2lyuj")

[node name="TextureButton" type="TextureButton" parent="Control/background"]
modulate = Color(1, 1, 0.34902, 1)
layout_mode = 2

[connection signal="button_down" from="Control/background/TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="button_up" from="Control/background/TextureButton" to="." method="_on_texture_button_button_up"]
[connection signal="mouse_entered" from="Control/background/TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="Control/background/TextureButton" to="." method="_on_texture_button_mouse_exited"]
